# Otclick

./: .dockerignore  .gitignore  CLAUDE.md  FILE_STRUCTURE.md  LICENSE  MVP_PLAN.md  PRICING.md  README.md  REFACTOR_PLAN.md  VPS_Commands.md  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  enter_code.html  form.html  login.html  login_email.html  poc_day1.py  poc_day1_playwright.py  recon_chat.py  test_fill_vacancy.py  worker_main.py
backend/app/: config.py  main.py
backend/recon_out/: page.html  requests.json  resp_001.json  resp_002.json  resp_003.json  resp_004.json  resp_005.json  resp_006.json  resp_007.json  resp_008.json  resp_009.json  resp_010.json  resp_011.json  resp_012.json  resp_014.json  resp_015.json  resp_016.json  resp_018.json  resp_019.json  resp_020.json  resp_021.json  resp_022.json  resp_023.json  resp_024.json  resp_026.json  resp_027.json  resp_028.json  resp_029.json
backend/scripts/: smoke_cover_letter.py  smoke_test_supabase.py
backend/tests/: test_agent_recruiter.py  test_agent_relevance.py  test_apply.py  test_billing.py  test_blacklist.py  test_captcha.py  test_cover_letter.py  test_filters_schema.py  test_filters_service.py  test_form_filler.py  test_gen_limiter.py  test_hh_auth.py  test_limiter.py  test_manual_cover_letter.py  test_plan.py  test_recruiter_api.py  test_recruiter_poll.py  test_recruiter_service.py  test_recruiter_tools.py  test_relevance.py  test_resume_sync.py  test_runner.py  (+5 more)
frontend/: package-lock.json  package.json
infra/: DEPLOY.md  docker-compose.yml  nginx.conf  refresh-tokens.cron
(+183 files in other folders)
