[project]
name = "aiautoclicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "supabase>=2.10.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langsmith>=0.8.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# `load_dotenv()` must run before app imports read settings; tests must set
# env vars before importing app modules (see CLAUDE.md).
"backend/app/main.py" = ["E402"]
"backend/worker_main.py" = ["E402"]
"backend/tests/test_*.py" = ["E402"]
